Fix Prerelease.yaml [skip ci]

--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -8,9 +8,17 @@ on:
     inputs:
       reason:
         description: "Why run?"
+
+      os:
+        description: "JSON array of runners"
+        type: string
+        default: '["ubuntu-latest"]'
+        required: true
+
       dotnet-version:
         description: "Version of .NET SDK to use"
         default: "9.0.x"
+
       force-publish:
         description: "Force publish even if already tagged"
         type: boolean
@@ -20,8 +28,8 @@ env:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
-  REASON: ${{ inputs.reason || 'manual run' }}
   FORCE_PUBLISH: ${{ inputs.force-publish || 'false' }}
+  REASON: ${{ inputs.reason || (inputs.force-publish && 'forced publish') || 'manual run' }}
 
 permissions:
   contents: write
@@ -120,5 +128,14 @@ jobs:
           if [ -z "${NUGET_API_KEY}" ]; then
             echo "NUGET_API_KEY not configured"; exit 1
           fi
-          dotnet nuget push artifacts/pack/*.nupkg  --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate
-          dotnet nuget push artifacts/pack/*.snupkg --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate
+          dotnet nuget push artifacts/pack/*.nupkg \
+            --api-key "$NUGET_API_KEY" \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
+
+          echo "If symbols package exists, push that too:"
+
+          dotnet nuget push artifacts/pack/*.snupkg \
+            --api-key "$NUGET_API_KEY" \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
