--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -39,6 +39,7 @@ env:
   FORCE_PUBLISH: ${{ inputs.force-publish || 'false' }}
   REASON: ${{ inputs.reason || (inputs.force-publish && 'forced publish') || 'manual run' }}
   SAVE_PACKAGE_ARTIFACT: ${{  inputs.save_package_artifact || 'false' }}
+  MINVER_TAG_PREFIX: "v"
 
 permissions:
   contents: write
@@ -52,7 +53,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          fetch-tags: true
 
       - name: Skip if commit already tagged (any v* tag)
         id: tagcheck
@@ -126,7 +126,12 @@ jobs:
         if: steps.tagcheck.outputs.already_tagged == 'false'
         run: |
           mkdir -p artifacts/pack
-          dotnet pack -c Release -o artifacts/pack /p:MinVerTagPrefix=${MINVER_TAG_PREFIX} "/p:PackageReleaseNotes=Prerelease: ${REASON:-N/A}"
+          dotnet pack \
+            --configuration Release \
+            --no-build \
+            --output artifacts/pack \
+            /p:MinVerTagPrefix=${MINVER_TAG_PREFIX} \
+            "/p:PackageReleaseNotes=Prerelease: ${REASON:-N/A}"
           ls -1 artifacts/pack
 
       - name: Publish prerelease to NuGet
