Make the test record TimeAndRandom serializable for better display in TestExplorer.

--- a/.editorconfig
+++ b/.editorconfig
@@ -395,6 +395,7 @@ dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
 dotnet_diagnostic.CA1859.severity = none
 
+dotnet_diagnostic.CA1860.severity = none       # Avoid using 'Enumerable.Any()' extension method
 dotnet_diagnostic.CA1031.severity = warning    # Don’t catch System.Exception
 dotnet_diagnostic.CA2200.severity = warning    # Use 'throw;' to preserve stack
 dotnet_diagnostic.CA2219.severity = warning    # Don’t throw in finally/filter
