--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,13 +10,13 @@
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
         <PackageVersion Include="MinVer" Version="6.0.0" />
         <!-- The test stack: -->
-        <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.14.2" />
-        <PackageVersion Include="FluentAssertions" Version="8.7.0" />
-        <PackageVersion Include="xunit.v3" Version="3.0.1" />
-        <PackageVersion Include="xunit.v3.extensibility.core" Version="3.0.1" />
-        <!-- Microsoft Testing Platform makes the following assemblies redundant:
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />   <!- - required for VSTest but not for MS Test Platform - ->
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" /> <!- - required for VSTest but not for MS Test Platform - ->
+        <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.0.4" />
+        <PackageVersion Include="FluentAssertions" Version="8.8.0" />
+        <PackageVersion Include="xunit.v3" Version="3.1.0" />
+        <!-- required for VSTest but not for MS Test Platform. Microsoft Testing Platform makes the following assemblies redundant:
+        <PackageVersion Include="xunit.v3.extensibility.core" Version="3.1.0" />
+        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" />
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
         <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
         -->
         <!-- BenchmarkDotNet -->
